--- a/docker-files/Dockerfile-web
+++ b/docker-files/Dockerfile-web
@@ -1,4 +1,4 @@
-FROM node:10
+FROM node:11
 
 ARG API_URL
 ARG API_URL_BROWSER
@@ -8,6 +8,5 @@ WORKDIR /app
 ENV HOST 0.0.0.0
 EXPOSE 3000
 
-CMD yarn install --ignore-engines && API_URL=${API_URL} API_URL_BROWSER=${API_URL_BROWSER} npm run dev
-
+ENTRYPOINT npm rebuild && yarn dev
 
